Mudei o index, adicionei o css e coloquei o template do frontend

--- a/index.html
+++ b/index.html
@@ -1,44 +1,112 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Cadastro Instituição</title>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+  <title>Hope - Solidariedade em Movimento</title>
+
+  <!-- slider stylesheet -->
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+
+  <!-- bootstrap core css -->
+  <link rel="stylesheet" type="text/css" href="frontend/css/bootstrap.css" />
+
+  <!-- fonts style -->
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Poppins:400,700|Roboto:400,700&display=swap" rel="stylesheet" />
+
+  <!-- Custom styles for this template -->
+  <link href="frontend/css/style.css" rel="stylesheet" />
+  <link href="frontend/css/responsive.css" rel="stylesheet" />
 </head>
+
 <body>
-    <h2>Cadastro de Instituição</h2>
-    <form id="cadastroForm">
-        <input type="text" id="nome" placeholder="Nome" required><br>
-        <input type="email" id="email" placeholder="Email" required><br>
-        <input type="password" id="senha" placeholder="Senha" required><br>
-        <input type="text" id="telefone" placeholder="Telefone"><br>
-        <button type="submit">Cadastrar</button>
-    </form>
+  <div class="hero_area">
+    <!-- header section -->
+    <header class="header_section">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg custom_nav-container">
+          <a class="navbar-brand" href="index.html">
+            <img src="frontend/images/logo.png" alt="Hope" />
+            <span>Hope</span>
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-    <script>
-    document.getElementById('cadastroForm').addEventListener('submit', function(e) {
-        e.preventDefault();
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="index.html">Início</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="cadastro.html">Cadastre-se</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="login.html">Login</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </header>
 
-        const dados = {
-            nome: document.getElementById('nome').value,
-            email: document.getElementById('email').value,
-            senha: document.getElementById('senha').value,
-            telefone: document.getElementById('telefone').value
-        };
+    <!-- slider section -->
+    <section class="slider_section position-relative">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="detail-box">
+              <h1>Hope <br /><span>Solidariedade em Movimento</span></h1>
+              <p>Conectamos instituições que precisam de ajuda com voluntários e doadores, de forma prática e segura. Armários inteligentes e entregas solidárias para quem mais precisa.</p>
+              <div class="btn-box">
+                <a href="cadastro.html" class="btn-1">Cadastre sua Instituição</a>
+                <a href="login.html" class="btn-2">Entrar</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img src="frontend/images/solidarity.png" alt="Solidariedade" class="img-fluid" />
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
 
-        fetch('backend/cadastros/cadastro.php', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify(dados)
-        })
-        .then(response => response.json())
-        .then(data => {
-            if(data.success){
-                alert('Cadastro realizado!');
-            } else {
-                alert('Erro ao cadastrar.');
-            }
-        });
-    });
-    </script>
+  <!-- about section -->
+  <section class="about_section layout_padding">
+    <div class="container">
+      <div class="heading_container">
+        <h2>Sobre o Hope</h2>
+      </div>
+      <p>O Hope é um projeto de solidariedade que visa facilitar a conexão entre doadores e instituições de caridade. Utilizamos tecnologia de localização e armários inteligentes para tornar a doação e retirada de suprimentos rápida, segura e eficiente.</p>
+    </div>
+  </section>
+
+  <!-- footer section -->
+  <section class="info_section layout_padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h5>Fale Conosco</h5>
+          <p>Email: contato@hope.org<br>Telefone: (11) 99999-9999</p>
+        </div>
+        <div class="col-md-6">
+          <h5>Redes Sociais</h5>
+          <p>Instagram | Facebook | Twitter</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- JS scripts -->
+  <script src="frontend/js/jquery-3.4.1.min.js"></script>
+  <script src="frontend/js/bootstrap.js"></script>
+  <script src="frontend/js/custom.js"></script>
 </body>
+
 </html>
