Criei página básica de cadastro e conectei com backend

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <h1>Hope <br /><span>Solidariedade em Movimento</span></h1>
               <p>Conectamos instituições que precisam de ajuda com voluntários e doadores, de forma prática e segura. Armários inteligentes e entregas solidárias para quem mais precisa.</p>
               <div class="btn-box">
-                <a href="cadastro.html" class="btn-1">Cadastre sua Instituição</a>
+                <a href="frontend/cadastro.html" class="btn-1">Cadastre sua Instituição</a>
                 <a href="login.html" class="btn-2">Entrar</a>
               </div>
             </div>
