Terminei a página de login

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="header_section">
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container">
-          <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="index.html">
             <img src="frontend/images/logo.png" alt="Hope" />
             <span>Hope</span>
           </a>
@@ -40,13 +40,13 @@
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Início</a>
+                  <a class="nav-link" href="../Projeto-Hope/index.html">Início</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="cadastro.html">Cadastre-se</a>
+                  <a class="nav-link" href="frontend/cadastro.html">Cadastre-se</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="login.html">Login</a>
+                  <a class="nav-link" href="frontend/login.html">Login</a>
                 </li>
               </ul>
             </div>
@@ -65,7 +65,7 @@
               <p>Conectamos instituições que precisam de ajuda com voluntários e doadores, de forma prática e segura. Armários inteligentes e entregas solidárias para quem mais precisa.</p>
               <div class="btn-box">
                 <a href="frontend/cadastro.html" class="btn-1">Cadastre sua Instituição</a>
-                <a href="login.html" class="btn-2">Entrar</a>
+                <a href="frontend/login.html" class="btn-2">Entrar</a>
               </div>
             </div>
           </div>
