--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -9,14 +9,14 @@
   <title>Cadastro - Hope - Solidariedade em Movimento</title>
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="frontend/css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Poppins:400,700|Roboto:400,700&display=swap" rel="stylesheet" />
 
   <!-- Custom styles for this template -->
-  <link href="frontend/css/style.css" rel="stylesheet" />
-  <link href="frontend/css/responsive.css" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet" />
+  <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -25,8 +25,8 @@
     <header class="header_section">
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container">
-          <a class="navbar-brand" href="index.html">
-            <img src="frontend/images/logo.png" alt="Hope" />
+          <a class="navbar-brand" href="../index.html">
+            <img src="images/logo.png" alt="Hope" />
             <span>Hope</span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -37,7 +37,7 @@
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Início</a>
+                  <a class="nav-link" href="../index.html">Início</a>
                 </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="cadastro.html">Cadastre-se</a>
@@ -103,9 +103,8 @@
   </section>
 
   <!-- JS scripts -->
-  <script src="frontend/js/jquery-3.4.1.min.js"></script>
-  <script src="frontend/js/bootstrap.js"></script>
-  <script src="frontend/js/custom.js"></script>
+  <script src="css/bootstrap.css"></script>
+  
   <script>
     document.getElementById("formCadastro").addEventListener("submit", function (event) {
       event.preventDefault(); // Evita o envio do formulário tradicional
