--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -56,11 +56,11 @@
     <section class="cadastro_section layout_padding">
       <div class="container">
         <div class="heading_container">
-          <h2>Cadastro de Instituição</h2>
+          <h2>Cadastro</h2>
         </div>
         <form id="formCadastro">
           <div class="form-group">
-            <label for="nome">Nome da Instituição</label>
+            <label for="nome">Nome</label>
             <input type="text" class="form-control" id="nome" name="nome" required />
           </div>
           <div class="form-group">
@@ -79,7 +79,7 @@
             <label for="confirma_senha">Confirmar Senha</label>
             <input type="password" class="form-control" id="confirma_senha" name="confirma_senha" required />
           </div>
-          <button type="submit" class="btn-1">Cadastrar</button>
+          <button type="submit" class="btn btn-primary">Cadastrar</button>
         </form>
         <div id="message" class="mt-3"></div>
       </div>
