--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <link href="frontend/css/responsive.css" rel="stylesheet" />
 </head>
 
+
 <body>
   <div class="hero_area">
     <!-- header section -->
@@ -48,6 +49,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="frontend/login.html">Login</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="frontend/gerador_senha.html">Entrega</a>
+                </li>                
               </ul>
             </div>
           </div>
@@ -105,6 +109,40 @@
   <script src="frontend/js/jquery-3.4.1.min.js"></script>
   <script src="frontend/js/bootstrap.js"></script>
   <script src="frontend/js/custom.js"></script>
+  
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const usuarioLogado = localStorage.getItem("usuario_logado");
+  
+      if (usuarioLogado === "true") {
+        // Remove o botão "Login"
+        const loginLink = document.querySelector('a[href="frontend/login.html"]');
+        if (loginLink && loginLink.parentElement) {
+          loginLink.parentElement.remove();
+        }
+  
+        // Adiciona o botão "Sair"
+        const navList = document.querySelector(".navbar-nav");
+        if (navList) {
+          const logoutItem = document.createElement("li");
+          logoutItem.classList.add("nav-item");
+  
+          logoutItem.innerHTML = `<a class="nav-link" href="#" id="logoutBtn">Sair</a>`;
+          navList.appendChild(logoutItem);
+  
+          // Ao clicar em "Sair", remove dados e recarrega a página
+          document.getElementById("logoutBtn").addEventListener("click", () => {
+            localStorage.removeItem("usuario_logado");
+            localStorage.removeItem("usuario_nome");
+            location.reload();
+          });
+        }
+      }
+    });
+  </script>
+  
+  
+  
 </body>
 
 </html>
