--- a/frontend/login.html
+++ b/frontend/login.html
@@ -65,6 +65,10 @@
           </div>
 
           <button type="submit" class="btn btn-primary">Entrar</button>
+          <div class="mt-3">
+            <a href="redefinir_senha.html">Esqueceu a senha?</a>
+          </div>
+          
         </form>
       </div>
     </section>
