--- a/frontend/contate.html
+++ b/frontend/contate.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Brighton - Contato</title>
+  <title>Cadastre sua Instituição</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   <link href="css/style.css" rel="stylesheet" />
   <link href="css/responsive.css" rel="stylesheet" />
@@ -42,7 +42,15 @@
         </div>
       </div>
     </div>
+
+</div>
+</br>
+<div class="col-md-6 d-flex justify-content-center align-center">
+  <img src="../frontend/css/images/mapa.png" style="max-width: 1000px; height: auto; margin-left: 1000px;" />
+</div>
+
   </section>
+  
 
   <script type="text/javascript" src="js/bootstrap.js"></script>
 </body>
